# proto_stream

./: Cargo.toml  README.md  build.rs
dart_client/: justfile  pubspec.yaml
dart_client/lib/: dart_client.dart  length_prefix_codec.dart
schemas/: schema.proto
src/: lib.rs
